--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -666,9 +666,6 @@ body{
 .order-last{
   order: 9999;
 }
-.-m-14{
-  margin: -3.5rem;
-}
 .-mx-4{
   margin-left: -1rem;
   margin-right: -1rem;
@@ -933,8 +930,8 @@ body{
   height: -moz-max-content;
   height: max-content;
 }
-.h-14{
-  height: 3.5rem;
+.h-60{
+  height: 15rem;
 }
 .max-h-\[32rem\]{
   max-height: 32rem;
@@ -969,6 +966,9 @@ body{
 .w-6{
   width: 1.5rem;
 }
+.w-\[6\.25rem\]{
+  width: 6.25rem;
+}
 .w-auto{
   width: auto;
 }
@@ -979,11 +979,8 @@ body{
   width: -moz-max-content;
   width: max-content;
 }
-.w-48{
-  width: 12rem;
-}
-.w-\[6\.25rem\]{
-  width: 6.25rem;
+.w-36{
+  width: 9rem;
 }
 .min-w-52{
   min-width: 13rem;
@@ -1030,8 +1027,14 @@ body{
 .max-w-\[27\.8125rem\]{
   max-width: 27.8125rem;
 }
+.max-w-\[3\.625rem\]{
+  max-width: 3.625rem;
+}
 .max-w-\[31\.75rem\]{
   max-width: 31.75rem;
+}
+.max-w-\[33\.875rem\]{
+  max-width: 33.875rem;
 }
 .max-w-\[35\.25rem\]{
   max-width: 35.25rem;
@@ -1075,23 +1078,17 @@ body{
 .max-w-\[7\.5rem\]{
   max-width: 7.5rem;
 }
+.max-w-\[9\.3125rem\]{
+  max-width: 9.3125rem;
+}
 .max-w-base{
   max-width: 72.875rem;
 }
 .max-w-xl{
   max-width: 36rem;
 }
-.max-w-md{
-  max-width: 28rem;
-}
-.max-w-\[33\.875rem\]{
-  max-width: 33.875rem;
-}
-.max-w-\[9\.3125rem\]{
-  max-width: 9.3125rem;
-}
-.max-w-\[3\.625rem\]{
-  max-width: 3.625rem;
+.max-w-screen-lg{
+  max-width: 1024px;
 }
 .flex-1{
   flex: 1 1 0%;
@@ -1360,10 +1357,6 @@ body{
 }
 .border-transparent{
   border-color: transparent;
-}
-.border-gray-300{
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 .bg-\[\#020202\]\/20{
   background-color: rgb(2 2 2 / 0.2);
@@ -1738,6 +1731,10 @@ body{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.\!text-brand-black-400{
+  --tw-text-opacity: 1 !important;
+  color: rgb(88 87 87 / var(--tw-text-opacity)) !important;
+}
 .text-gray-700{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
@@ -1756,14 +1753,14 @@ body{
   --tw-shadow-colored: inset 0 0 0 2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow{
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.shadow-md{
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .outline-none{
@@ -2062,6 +2059,14 @@ h3{
   --tw-bg-opacity: 1;
   background-color: rgb(51 196 69 / var(--tw-bg-opacity));
 }
+.placeholder\:text-gray-400::-moz-placeholder{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+.placeholder\:text-gray-400::placeholder{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
 .hover\:border-brand-black-200:hover{
   --tw-border-opacity: 1;
   border-color: rgb(228 228 228 / var(--tw-border-opacity));
@@ -2105,9 +2110,9 @@ h3{
   --tw-text-opacity: 1;
   color: rgb(235 87 87 / var(--tw-text-opacity));
 }
-.hover\:text-gray-700:hover{
+.hover\:text-green-500:hover{
   --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
+  color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 .hover\:text-opacity-80:hover{
   --tw-text-opacity: 0.8;
@@ -2307,6 +2312,11 @@ h3{
     display: block;
     -webkit-box-orient: horizontal;
     -webkit-line-clamp: none;
+  }
+
+
+  .sm\:block{
+    display: block;
   }
 
 
@@ -2864,6 +2874,11 @@ h3{
   }
 
 
+  .lg\:h-14{
+    height: 3.5rem;
+  }
+
+
   .lg\:h-8{
     height: 2rem;
   }
@@ -2871,6 +2886,17 @@ h3{
 
   .lg\:h-\[2\.375rem\]{
     height: 2.375rem;
+  }
+
+
+  .lg\:h-max{
+    height: -moz-max-content;
+    height: max-content;
+  }
+
+
+  .lg\:h-80{
+    height: 20rem;
   }
 
 
@@ -2966,6 +2992,11 @@ h3{
 
   .lg\:gap-7{
     gap: 1.75rem;
+  }
+
+
+  .lg\:gap-5{
+    gap: 1.25rem;
   }
 
 
@@ -3205,8 +3236,8 @@ h3{
   }
 
 
-  .lg\:text-\[3\.75rem\]{
-    font-size: 3.75rem;
+  .lg\:text-\[5rem\]{
+    font-size: 5rem;
   }
 
 
@@ -3273,11 +3304,6 @@ h3{
   .lg\:text-xl\/6{
     font-size: 1.25rem;
     line-height: 1.5rem;
-  }
-
-
-  .lg\:text-\[5rem\]{
-    font-size: 5rem;
   }
 }
 @media (min-width: 1280px){
