--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -731,6 +731,9 @@ body{
 .mt-2\.5{
   margin-top: 0.625rem;
 }
+.mt-20{
+  margin-top: 5rem;
+}
 .mt-24{
   margin-top: 6rem;
 }
@@ -758,17 +761,17 @@ body{
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
 }
-.line-clamp-3{
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;
-}
 .line-clamp-2{
   overflow: hidden;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
+}
+.line-clamp-3{
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
 }
 .block{
   display: block;
@@ -867,10 +870,6 @@ body{
   width: 2rem;
   height: 2rem;
 }
-.size-\[4\.5rem\]{
-  width: 4.5rem;
-  height: 4.5rem;
-}
 .size-\[4\.875rem\]{
   width: 4.875rem;
   height: 4.875rem;
@@ -920,6 +919,9 @@ body{
 }
 .h-8{
   height: 2rem;
+}
+.h-96{
+  height: 24rem;
 }
 .h-\[1\.125rem\]{
   height: 1.125rem;
@@ -1057,9 +1059,6 @@ body{
 }
 .max-w-\[45\.0625rem\]{
   max-width: 45.0625rem;
-}
-.max-w-\[45\.625rem\]{
-  max-width: 45.625rem;
 }
 .max-w-\[45\.875rem\]{
   max-width: 45.875rem;
@@ -1523,11 +1522,17 @@ body{
 .pr-3{
   padding-right: 0.75rem;
 }
+.pr-4{
+  padding-right: 1rem;
+}
 .ps-12{
   padding-inline-start: 3rem;
 }
 .ps-19{
   padding-inline-start: 1.1875rem;
+}
+.pt-1{
+  padding-top: 0.25rem;
 }
 .pt-1\.5{
   padding-top: 0.375rem;
@@ -1585,6 +1590,10 @@ body{
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+.text-32{
+  font-size: 2rem;
+  line-height: 2.5rem;
 }
 .text-40{
   font-size: 2.5rem;
@@ -1652,10 +1661,6 @@ body{
 .text-xs\/3{
   font-size: 0.75rem;
   line-height: .75rem;
-}
-.text-base\/6{
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 .font-bold{
   font-weight: 700;
@@ -2265,6 +2270,11 @@ h3{
   }
 
 
+  .xs\:max-w-\[16\.375rem\]{
+    max-width: 16.375rem;
+  }
+
+
   .xs\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -2277,6 +2287,16 @@ h3{
 
   .xs\:flex-col{
     flex-direction: column;
+  }
+
+
+  .xs\:border-b-0{
+    border-bottom-width: 0px;
+  }
+
+
+  .xs\:border-r{
+    border-right-width: 1px;
   }
 
 
@@ -2470,6 +2490,11 @@ h3{
   }
 
 
+  .md\:hidden{
+    display: none;
+  }
+
+
   .md\:aspect-\[350\/256\]{
     aspect-ratio: 350/256;
   }
@@ -2487,15 +2512,15 @@ h3{
   }
 
 
-  .md\:size-sixty{
-    width: 3.75rem;
-    height: 3.75rem;
-  }
-
-
   .md\:size-\[4\.5rem\]{
     width: 4.5rem;
     height: 4.5rem;
+  }
+
+
+  .md\:size-sixty{
+    width: 3.75rem;
+    height: 3.75rem;
   }
 
 
@@ -2586,6 +2611,11 @@ h3{
 
   .md\:gap-2{
     gap: 0.5rem;
+  }
+
+
+  .md\:gap-5{
+    gap: 1.25rem;
   }
 
 
@@ -2711,6 +2741,11 @@ h3{
   }
 
 
+  .md\:pb-6{
+    padding-bottom: 1.5rem;
+  }
+
+
   .md\:pl-0{
     padding-left: 0px;
   }
@@ -2754,6 +2789,12 @@ h3{
   .md\:text-6xl{
     font-size: 3.75rem;
     line-height: 1;
+  }
+
+
+  .md\:text-base\/\[1\.125rem\]{
+    font-size: 1rem;
+    line-height: 1.125rem;
   }
 
 
@@ -2814,6 +2855,11 @@ h3{
 
   .lg\:mt-30{
     margin-top: 1.875rem;
+  }
+
+
+  .lg\:mt-40{
+    margin-top: 10rem;
   }
 
 
@@ -2918,6 +2964,11 @@ h3{
   }
 
 
+  .lg\:h-\[33rem\]{
+    height: 33rem;
+  }
+
+
   .lg\:h-max{
     height: -moz-max-content;
     height: max-content;
@@ -2969,6 +3020,11 @@ h3{
   }
 
 
+  .lg\:flex-1{
+    flex: 1 1 0%;
+  }
+
+
   .lg\:flex-none{
     flex: none;
   }
@@ -3014,6 +3070,11 @@ h3{
   }
 
 
+  .lg\:gap-50{
+    gap: 3.125rem;
+  }
+
+
   .lg\:gap-6{
     gap: 1.5rem;
   }
@@ -3021,6 +3082,16 @@ h3{
 
   .lg\:gap-7{
     gap: 1.75rem;
+  }
+
+
+  .lg\:gap-8{
+    gap: 2rem;
+  }
+
+
+  .lg\:gap-9{
+    gap: 2.25rem;
   }
 
 
@@ -3277,6 +3348,12 @@ h3{
   }
 
 
+  .lg\:text-base\/5{
+    font-size: 1rem;
+    line-height: 1.25rem;
+  }
+
+
   .lg\:text-base\/\[1\.125rem\]{
     font-size: 1rem;
     line-height: 1.125rem;
@@ -3331,9 +3408,8 @@ h3{
   }
 
 
-  .lg\:text-base\/5{
-    font-size: 1rem;
-    line-height: 1.25rem;
+  .lg\:leading-\[1\.8rem\]{
+    line-height: 1.8rem;
   }
 }
 @media (min-width: 1280px){
